src/components/PlaylistManager/PlaylistManager.css
#playlist-tabs {
    top: 56px;
}

.playlist-tab {
    display: flex;
    align-content: center;
}

.playlist-contents {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: space-between;
}

.playlist-main {
    padding-left: 16px;
    padding-top: 60px;
    padding-bottom: 70px;
    overflow: scroll;    
}

/* .playlist-main Typography {

} */

/* @media (min-device-width: 375px) {
    #playlist-tabs {
        top: 57px;
    }
} */

 @media (min-device-width: 414px) {
    .playlist-main {
        padding-bottom: 78px;
    }

}
@media(min-device-height: 812px) {
    .playlist-main {
        padding-bottom: 79px;
        padding-left: 15px;
    } 
}

/* @media (min-device-width: 768px) {
    .playlist-main {
        width: calc(100vw - 20px);
    }
} */

/*
@media (min-device-width: 1224px) {
    .playlist-main {
        height: 600px;       
    }
} */

